--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "js-cookie": "^3.0.1",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
